@@ -35,6 +35,7 @@ static char *RCSid() { return RCSid("gadgets.c,v 1.1.3.1 2000/05/03 21:47:15 hbb
 ]*/
 
 #include "gadgets.h"
+#include "plot3d.h" /* For is_plot_with_palette() */
 
 #ifdef PM3D
 #include "pm3d.h"
